<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="refresh">Refresh</string>
    
    <string name="temp_1">Temperature 1:</string>
    <string name="temp_2">Temperature 2:</string>
    <string name="temp_3">Temperature 3:</string>
    
    <string name="light_1">Garden Lights: </string>
    
    <string name="n_a">Not available</string>
    
    <string name="bluetooth_n_a">Bluetooth is not available</string>
        
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>

    <string name="bt_status">Bluetooth Status: </string>    
    <string name="bt_error">Connection Error</string>
    <string name="bt_connected_to">Connected to </string>
    <string name="bt_disconnected">Disconnected</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_devices">Paired/Scanned Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="empty_devices">No paired/scanned devices found.</string>
</resources>